# cemc-plots-kit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
cemc_esmi_plots/: __init__.py  __main__.py  config.py  draw.py  job.py  logger.py  task.py
cemc_esmi_plots/plots/: height_500_mslp.py  height_500_wind_850.py  mslp_height_500.py  prep_24h.py  radar_reflectivity.py  rain_12h_wind_10m.py  rain_1h_wind_10m.py  rain_24h.py  rain_24h_wind_10m.py  rain_3h_wind_10m.py  rain_6h_wind_10m.py  t_2m.py  wind_10m.py
cemc_esmi_plots/source/: __init__.py
cemc_plots_kit/: __main__.py  config.py  draw.py  job.py  task.py
cemc_plots_kit/plots/: __init__.py  height_500_mslp.py
cemc_plots_kit/source/: __init__.py
tests/cma_hpc/: conftest.py
tests/cma_hpc/api/: draw.py  job.py  test_api_draw.py  test_api_job.py  test_api_task.py
tests/cma_hpc/cli/: draw.py  test_cli_draw.py
